...
        <item
            android:id="@+id/nav_sewing_machines"
            android:icon="@drawable/ic_round_create"
            android:title="@string/menu_sewing_machines" />

        <item
            android:id="@+id/nav_arduino_connection"
            android:icon="@drawable/ic_round_settings"
            android:title="@string/menu_arduino_connection" />

        <item
            android:id="@+id/nav_summary"
            android:icon="@drawable/ic_round_play_circle_filled"
...
