<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.logos.LogoEditorFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btnDone"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="UselessParent">

            <LinearLayout
                android:id="@+id/buttonToolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:visibility="visible" />

            <es.uniovi.eii.stitchingbot.ui.canvas.CanvasView
                android:id="@+id/canvasView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_margin="20dp"
                android:background="@color/white" />

        </LinearLayout>

        <Button
            android:id="@+id/btnDone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_save"
            android:theme="@style/AppTheme.DARKBLUE"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btnSew" />

        <Button
            android:id="@+id/btnSew"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_sew"
            android:theme="@style/AppTheme.DARKBLUE"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.88" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>